# LegalCorpus

./: .env.example  .gitignore  README.md  config.py  main.py  models.py  pyproject.toml
pipeline/: discover.py
sources/: base.py  egazette.py  indiacode.py
utils/: browser.py  files.py  http.py
